# dr.daviddao.org

./: .gitignore  About.html  Blog.html  CNAME  CV.html  Contact.html  Publications.html  README.md  Research.html  biojs-vis-tree.min.js  blog.html  citations.txt  error.html  gsoc_demo.html  hindex.txt  index.html  keybase.txt  notes.html  pp.html  scholar.json  slide_config.js  snipvis.js  style.css
.github/workflows/: download-scholar-data.yml
blog/: Readme.md  _config.yml  authors.md  index.html
blog/_site/: index.html
blog/_site/authors/: index.html
blog/_site/js/: Cluster-Script.js  Matlab-Spark.js  Pig-Spark-2.js  Pig-Spark.js  highcharts.js
blog/js/: Cast.js  MLlib-Mahout.js  Regression.js  totalSetupTime.js
css/: style.css
img/: me.jpg.sb-51238fe9-2oloRo
js/: graphs.pde
pics/: micro.mov  x_4.mpeg
presentation/: präsentation.html  slide_config.js
presentation/.sass-cache/333b840a6cbdc10db03a8ea583b60b88de859c36/: default.scssc  phone.scssc
presentation/.sass-cache/543e38bed7f586c1f72789e122452f416109b19c/: _base.scssc  ePeek.scssc
presentation/theme/css/: default.css
presentation/theme/scss/: default.scss
scholar-crawler/: Cargo.toml
scholar-crawler/src/: main.rs
theme/css/: default.css
theme/scss/: default.scss
themes/tree_annot/newick_input/: newick_input.html
